<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/grey"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/nav_header_desc"
                android:src="@drawable/images" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tvNewComplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_complaint"
                android:gravity="center_vertical"
                android:drawablePadding="14dp"
                android:drawableTint="@color/colorPrimary"
                android:drawableLeft="@android:drawable/ic_menu_add"
                android:padding="16dp"/>
                <TextView
                    android:id="@+id/tvUpdate"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_complaint"
                    android:gravity="center_vertical"
                    android:drawablePadding="14dp"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableLeft="@android:drawable/ic_menu_info_details"
                    android:padding="16dp"/>
                <TextView
                    android:id="@+id/tvView"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_complaint"
                    android:gravity="center_vertical"
                    android:drawablePadding="14dp"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableLeft="@android:drawable/ic_menu_view"
                    android:padding="16dp"/>

                <TextView
                    android:id="@+id/tvAddOficer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_oficer"
                    android:gravity="center_vertical"
                    android:drawablePadding="14dp"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_add_officers"
                    android:padding="16dp"/>

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:gravity="center_vertical"
                    android:drawablePadding="14dp"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableLeft="@android:drawable/ic_lock_power_off"
                    android:padding="16dp"/>

            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
