<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_complaint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/preview_description"
            android:textSize="15dp" />

        <!-- To display picture taken -->
        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCapturePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_8"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/btn_take_picture"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complaint ID:"
                android:textColor="@color/bg_register"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tvCmpliantId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/etComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Complaint"
            android:textSize="16sp"
            android:textColor="@color/bg_register"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/etArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Area"
            android:textColor="@color/bg_register"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSave"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>